# voltglean

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: fetch.psm1  generate_publish_manifests.ps1  generate_publish_manifests.psm1  publish.yml  release.yml  submit_publish_manifests.ps1
src/: main.rs
templates/: script.ps1.hbs
