[package]
name = "voltglean"
version = "0.0.1"
edition = "2024"
description = "Export Windows power plans to an executable .bat script"
readme = "README.md"
repository = "https://github.com/Taraflex/voltglean.git"
categories = ["command-line-utilities", "os::windows-apis", "system-administration"]
keywords = ["windows", "powercfg", "power-plan", "backup", "automation"]
license = "MIT"

[[bin]]
name = "voltglean"
path = "src/main.rs"

[dependencies]
askama = "0.15.6"
indexmap = { version = "2.14.0", features = ["serde"] }
lazy-regex = "3.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

[profile.release]
#panic = "abort"
debug = 0
strip = true
split-debuginfo = "off"
incremental = false
lto = "thin"
codegen-units = 1