[package]
name = "voltglean"
version = "0.0.2"
edition = "2024"
description = "Exporting Windows power plans as a powershell script"
readme = "README.md"
repository = "https://github.com/Taraflex/voltglean.git"
categories = ["command-line-utilities", "config", "parsing", "os::windows-apis"]
keywords = ["windows", "power-management", "powercfg", "backup", "optimization"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "voltglean"
path = "src/main.rs"

[dependencies]
askama = "0.15.6"
indexmap = { version = "2.14.0", features = ["serde"] }
lazy-regex = "3.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

[profile.release]
#panic = "abort"
debug = 0
strip = true
split-debuginfo = "off"
incremental = false
lto = "thin"
codegen-units = 1
